--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -10,5 +10,6 @@ group :development do
   gem "rdoc", "~> 3.12"
   gem "bundler"
   gem "jeweler", "~> 1.8.4"
-  gem "rcov", ">= 0"
+  gem 'simplecov', :platforms => :mri_19
+  gem 'rcov', :platforms => :mri_18
 end
