--- a/node/package.json
+++ b/node/package.json
@@ -8,7 +8,8 @@
   },
   "repository": "",
   "dependencies": {
-    "redis": "0.8.3"
+    "redis": "0.8.3",
+    "jsondiffpatch": "0.0.7"
   },
   "devDependencies": {
     "mocha": "1.9.0"
