Fixed bug in confdis.subscribe() - host and port were being passed incorrectly to Redis causing a failed connection. Also updated .gitignore with some standard OS X and Jetbrains files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+#################
+## Node specific.
+#################
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
 node_modules
+node_modules/
+node_modules/**.**
 npm-debug.log
+
+#################
+## Jetbrains
+#################
+.idea
+
+#################
+## Misc
+#################
+.DS_Store
